--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>TEST</title>
-        <script src="landsoul.js"></script>
     </head>
     <body>
         <h1>Hello, world!</h1>
-        <p class="transbox">Err, wait!</p>
-        <p class="transbox">Does it works?</p>
-        <p class="transbox">Wish so...</p>
+        <p class="p1">Err, wait!</p>
+        <p class="p2">Does it works?</p>
+        <p class="p3">Wish so...</p>
+        <script src="landsoul.js"></script>
         <script>
-            window.$ = landsoul.select;
-            window.$$ = landsoul.proxy.select;
-            $('p')('innerHTML', 'Wow~');
-            $('h1')('setAttribute', 'style', 'color:red')('innerHTML', 'Title');
+            window.$ = q => document.querySelectorAll(q);
+            landsoul($('.p1'))('innerHTML', 'Wow, this line has been changed~')('onclick',()=>alert('ok'));
+            landsoul.proxy($('.p2')).innerHTML('yes!').onclick(()=>alert('yes'));
+            landsoul($('h1'))('setAttribute', 'style', 'color:red')('innerHTML', 'Title');
         </script>
     </body>
 </html>
